// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots React|Info/Decorator Use Info as story decorator 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/ForwardRef Displays forwarded ref components correctly 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Forwarded Ref Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/ForwardRef Uses forwardRef displayName if available 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Forwarded Ref Button w/ Display Name
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/GitHub issues #1814 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <div>
      <input
        type="text"
      />
      <textarea />
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/JSX Displays JSX in description 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Markdown Displays Markdown in description 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Markdown From external Markdown file 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Markdown From internal Markdown file 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.TableComponent Use a custom component for the table 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.excludedPropTypes Excludes propTypes that are in the excludedPropTypes array 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.header Shows or hides Info Addon header 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.inline Inlines component inside story 1`] = `
<div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <div
        style="border-bottom: 1px solid #eee; padding-top: 10px; margin-bottom: 10px;"
      >
        <h1
          style="margin: 0px; padding: 0px; font-size: 35px;"
        >
          React|Info/Options.inline
        </h1>
        <h2
          style="margin: 0px 0px 10px 0px; padding: 0px; font-weight: 400; font-size: 22px;"
        >
          Inlines component inside story
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <p>
        Component should be inlined between description and PropType table
      </p>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Story Source
      </h1>
      <div
        class="css-scc5fi"
      >
        <div
          class="css-1si67pu"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs css-4zr3vl"
                    >
                      <code
                        class="css-1maezg8"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="css-11xgcgt"
        >
          <button
            class="css-110qmus"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin: 20px 0px 0px 0px;"
        >
          "
          BaseButton
          " Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                label
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  string
                </span>
              </td>
              <td>
                yes
              </td>
              <td>
                -
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {
                  }
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots React|Info/Options.propTables Shows additional component prop tables 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.propTablesExclude Exclude component from prop tables 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <div>
      <button
        type="button"
      >
        Button
      </button>
      <button
        type="button"
      >
        Flow Typed Button
      </button>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.source Shows or hides Info Addon source 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.styles Extend info styles with an object 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: purple; color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Options.styles Full control over styles using a function 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Parameters Disable the addon entirely 1`] = `
<div>
  <button
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots React|Info/Parameters Overwrite the parameters with markdown variable 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Parameters Overwrite the text parameter with markdown inline 1`] = `
<div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <div
        style="border-bottom: 1px solid #eee; padding-top: 10px; margin-bottom: 10px;"
      >
        <h1
          style="margin: 0px; padding: 0px; font-size: 35px; color: green;"
        >
          React|Info/Parameters
        </h1>
        <h2
          style="margin: 0px 0px 10px 0px; padding: 0px; font-weight: 400; font-size: 22px;"
        >
          Overwrite the text parameter with markdown inline
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <p>
        description or documentation about my component, supports markdown
      </p>
      <div
        class="css-scc5fi"
      >
        <div
          class="css-1si67pu"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs css-4zr3vl"
                    >
                      <code
                        class="css-1maezg8"
                      >
                        <span
                          class="token operator"
                        >
                          &lt;
                        </span>
                        Button
                        <span
                          class="token operator"
                        >
                          &gt;
                        </span>
                        Click Here
                        <span
                          class="token operator"
                        >
                          &lt;
                        </span>
                        <span
                          class="token operator"
                        >
                          /
                        </span>
                        Button
                        <span
                          class="token operator"
                        >
                          &gt;
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="css-11xgcgt"
        >
          <button
            class="css-110qmus"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Story Source
      </h1>
      <div
        class="css-scc5fi"
      >
        <div
          class="css-1si67pu"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs css-4zr3vl"
                    >
                      <code
                        class="css-1maezg8"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="css-11xgcgt"
        >
          <button
            class="css-110qmus"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin: 20px 0px 0px 0px;"
        >
          "
          BaseButton
          " Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                label
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  string
                </span>
              </td>
              <td>
                yes
              </td>
              <td>
                -
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {
                  }
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots React|Info/Parameters Overwriting and extending the parameters and options set stories-wise 1`] = `
<div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <div
        style="border-bottom: 1px solid #eee; padding-top: 10px; margin-bottom: 10px;"
      >
        <h1
          style="margin: 0px; padding: 0px; font-size: 35px; color: green;"
        >
          React|Info/Parameters
        </h1>
        <h2
          style="margin: 0px 0px 10px 0px; padding: 0px; font-weight: 400; font-size: 22px;"
        >
          Overwriting and extending the parameters and options set stories-wise
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <p>
        Label propType should be excluded
      </p>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Story Source
      </h1>
      <div
        class="css-scc5fi"
      >
        <div
          class="css-1si67pu"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs css-4zr3vl"
                    >
                      <code
                        class="css-1maezg8"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="css-11xgcgt"
        >
          <button
            class="css-110qmus"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin: 20px 0px 0px 0px;"
        >
          "
          BaseButton
          " Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {
                  }
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots React|Info/Parameters Using paramaters across all stories 1`] = `
<div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <div
        style="border-bottom: 1px solid #eee; padding-top: 10px; margin-bottom: 10px;"
      >
        <h1
          style="margin: 0px; padding: 0px; font-size: 35px; color: green;"
        >
          React|Info/Parameters
        </h1>
        <h2
          style="margin: 0px 0px 10px 0px; padding: 0px; font-weight: 400; font-size: 22px;"
        >
          Using paramaters across all stories
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <div>
    <div
      style="font-family: Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif; color: black; font-weight: 300; line-height: 1.45; font-size: 15px; padding: 20px 40px 40px; border-radius: 2px; background-color: rgb(255, 255, 255);"
    >
      <p>
        This text should be displayed on every story and the component should be inlined between description and PropType table
      </p>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Story Source
      </h1>
      <div
        class="css-scc5fi"
      >
        <div
          class="css-1si67pu"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs css-4zr3vl"
                    >
                      <code
                        class="css-1maezg8"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="css-11xgcgt"
        >
          <button
            class="css-110qmus"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin: 20px 0px 0px 0px; padding: 0px 0px 5px 0px; font-size: 25px; border-bottom: 1px solid #EEE;"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin: 20px 0px 0px 0px;"
        >
          "
          BaseButton
          " Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                label
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  string
                </span>
              </td>
              <td>
                yes
              </td>
              <td>
                -
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {
                  }
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots React|Info/React Docgen Comments from Flow declarations 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Flow Typed Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/React Docgen Comments from PropType declarations 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Docgen Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/React Docgen Comments from component declaration 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/React Docgen Comments from named export component declaration 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Story Source Array prop 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <table>
      <thead>
        <tr>
          <th>
            name
          </th>
          <th>
            type
          </th>
          <th>
            default
          </th>
          <th>
            description
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            label
            <span
              style="color: red;"
            >
              *
            </span>
          </td>
          <td>
            string
          </td>
          <td />
          <td>
            Text to display inside button
          </td>
        </tr>
        <tr>
          <td>
            disabled
          </td>
          <td>
            boolean
          </td>
          <td>
            false
          </td>
          <td />
        </tr>
        <tr>
          <td>
            onClick
            <span
              style="color: red;"
            >
              *
            </span>
          </td>
          <td>
            function
          </td>
          <td />
          <td>
            Callback for when button is clicked
          </td>
        </tr>
        <tr>
          <td>
            style
          </td>
          <td>
            object
          </td>
          <td>
            {}
          </td>
          <td>
            Styles to apply to button
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Story Source Children 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <div>
      <p>
        Here is my nice button:
      </p>
      <button
        type="button"
      >
        Button
      </button>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Story Source Many props 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      disabled=""
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Story Source Object prop 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      style="color: midnightblue; background-color: powderblue; font-size: 16px; box-shadow: 1px 1px rgba(0, 0, 0, .07); border-radius: 5px; padding: 4px 8px;"
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/Story Source One prop 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots React|Info/deprecated Displays Markdown in description 1`] = `
<div>
  <div
    style="position: relative; z-index: 0;"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>
  <button
    class="info__show-button"
    style="font-family: sans-serif; font-size: 12px; display: block; position: fixed; background: rgb(2, 122, 197); color: rgb(255, 255, 255); padding: 5px 15px; cursor: pointer; top: 0px; right: 0px; border-radius: 0 0 0 5px;"
    type="button"
  >
    Show Info
  </button>
</div>
`;
